--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                             <div class="carousel-item active">
                                 <img src="img/R.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>First slide label</h5>
-                                    <p>Some representative placeholder content for the first slide.</p>
+                                    <h5>NFC TICKET</h5>
+                                    <p>using nfc card, token ex for calculating bus charges and automatically withdraw for their wallet.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
