--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="col-md-12 col-lg-12 Proflio mt-4 p-5 pd-0 me- ">
-                <h2 class="text-center pb-3 "><strong>Pro</strong>flio</h2>
+                <h2 class="text-center pb-3 "><strong>Port</strong>folio</h2>
 
                 <div class=" m-md-5 m-lg-62 m-xs-12">
                     <div id="carouselExampleCaptions" class="carousel slide">
