--- a/index.html
+++ b/index.html
@@ -76,22 +76,21 @@
                             <img src="img/1.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>NFC TICKET</h5>
-                                <p>using nfc card, token ex for calculating bus charges and automatically withdraw
-                                    for their wallet.</p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="img/2.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
+                                <h5>NFC TICKET</h5>
+                                <p></p>
                             </div>
                         </div>
                         <div class="carousel-item ">
                             <img src="img/3.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
+                                <h5>NFC TICKET</h5>
+                                <p></p>
                             </div>
                         </div>
                     </div>
