--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -33,7 +34,7 @@
                 <p id="welcome-message"></p>
 
                 <div class="mt-2 pt-2 border-top">
-                    <button type="button" class="btn btn-primary btn-sm">Take a took</button>
+                    <button type="button" class="btn btn-primary btn-sm">Take a look</button>
                     <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="toast">Close</button>
                 </div>
             </div>
@@ -41,7 +42,7 @@
     </div>
 
 
-
+    <div class="bx bx-moon" id="darkmode"></div>
     <div class="container ">
         <div class="col-md-12 col-lg-12 Introduction mt-5 p-5 pd-0 shadow  rounded">
             <div class="home-text">
@@ -209,21 +210,32 @@
                     <div class="d-flex align-items-center justify-content-center">
                         <div class="contact-form cont">
 
-                            <form id="submit-from">
+<!--                             <form id="submit-from">
                                 <div class="form-floating mb-3  ">
                                     <input type="text" class="form-control shadow" id="floatingInput"
                                         placeholder="name@example.com " required>
+                                    <p id="errName"></p>
                                     <label for="floatingInput">Name</label>
                                 </div>
                                 <div class="form-floating mb-3">
                                     <input required type="text" class="form-control shadow" id="floatingPassword"
                                         placeholder="write your messaage here">
+                                    <p id="errMsg"></p>
                                     <label for="floatingPassword">write your messaage here</label>
                                 </div>
 
                                 <div class="d-flex align-items-center justify-content-center"><button type="submit"
                                         value="submit" class="btn btn-secondary btn- sm shadow ">submit</button></div>
-                            </form>
+                            </form> -->
+                            <form id="submit-form" action="" name="f" >
+            <input type="text" placeholder="Your Name" name="name" id="name" onkeyup="validateName()">
+            <p id="errName"></p>
+            <input type="text" name="email" id="email" placeholder="Your Email" onkeyup="validateEmail()">
+            <p id="errEmail"></p>
+            <input type="text" name="message" id="message" placeholder="Write your message here" onkeyup="validateMsg()">
+            <p id="errMsg"></p>
+            <input type="submit" value="submit" class="contact-button" onclick="validateName(); validateEmail(); validateMsg();">
+        </form>
                         </div>
                     </div>
                 </section>
@@ -301,6 +313,8 @@
                 toast.show();
             });
         </script>
+        <script src="script.js"></script>
+        <script src="valid.js"></script>
         
 </body>
 
