--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
@@ -42,7 +43,7 @@
     </div>
 
 
-    <div class="bx bx-moon" id="darkmode"></div>
+    <div class="bx bx-moon" id="darkmode" style="cursor:pointer;"></div>
     <div class="container ">
         <div class="col-md-12 col-lg-12 Introduction mt-5 p-5 pd-0 shadow  rounded">
             <div class="home-text">
